src/objects/n2de__Member_distributor_detail__c.object
<CustomObject>
    <description>Team member distributor details</description>
    <fields>
        <fullName>n2de__Actual_distribution_sequence__c</fullName>
        <label>Actual distribution sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Distribution_control_count__c</fullName>
        <label>Distribution control count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Distribution_sequence__c</fullName>
        <label>Distribution sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Distribution_team_member__c</fullName>
        <label>Distribution team member</label>
        <referenceTo>n2de__Team_member__c</referenceTo>
        <relationshipLabel>Member distributor details</relationshipLabel>
        <relationshipName>Member_distributor_details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>n2de__Distributor__c</fullName>
        <label>Distributor</label>
        <referenceTo>n2de__Distributor__c</referenceTo>
        <relationshipLabel>Member distributor details</relationshipLabel>
        <relationshipName>Member_distributor_details</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>n2de__Distributor_name__c</fullName>
        <formula>n2de__Distributor__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distributor name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Last_assignment_date__c</fullName>
        <label>Last assignment date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Last_count_reset_date__c</fullName>
        <label>Last count reset date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>n2de__Load_balanced_count__c</fullName>
        <label>Load balanced count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Rejections_ih__c</fullName>
        <label>Rejections ih</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>n2de__Username__c</fullName>
        <formula>n2de__Distribution_team_member__r.n2de__User__r.Username</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Username</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>n2de__Weighting_ih__c</fullName>
        <label>Weighting ih</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Member distributor detail</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Member distributor details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>